--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>MY PORTFOLIO PROJJECT</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
 <body>
 <div id="hero">
@@ -31,7 +31,7 @@
 </div>
 <section id="about">
 <div class="main">
-<img src="logo3.jpg" height="750px">
+<img src="images/logo3.jpg" height="750px">
 <div class="about-text">
 <h2>About Me</h2>
 <h5>Developer <span>& Designer</span></h5>
@@ -97,7 +97,7 @@ to work across all devices. Secondly, it needs to be fast as possible.</p>
       <h1 align="center" class="sub-title">My <span>Projects</span></h1>
       <div class="work-list">
           <div class="work">
-             <img src="work3.jpg" height="450px">
+             <img src="images/work3.jpg" height="450px">
              <div class="layer">
              <h3><span>Social Media Apps</span></h3>
               <p>The app connects you to the talented people around the world.
@@ -107,7 +107,7 @@ to work across all devices. Secondly, it needs to be fast as possible.</p>
           </div>
 
            <div class="work">
-             <img src="work2.jpg" height="450px">
+             <img src="images/work2.jpg" height="450px">
               <div class="layer">
              <h3><span>Music Apps</span></h3>
               <p>The app connects you to the talented people around the world.
@@ -117,7 +117,7 @@ to work across all devices. Secondly, it needs to be fast as possible.</p>
           </div>
 
           <div class="work">
-             <img src="work4.jpg" height="450px">
+             <img src="images/work4.jpg" height="450px">
               <div class="layer">
              <h3><span>Online Shopping Apps</span></h3>
               <p>The app connects you to the talented people around the world.
